Bug 1953933 - Make `TextEditor::IsEmpty()` return `true` if it's not been initialized yet r=m_kato

`GetTextNode()` requires that the instance has already been initialized since
it requires the native anonymous `<div>`.  And `IsEmpty()` is a public method.
Therefore, it should return `true` if there is no editor root, i.e., when it's
not been initialized yet after creation or destroyed.

Additionally, `TextControlState::GetValue()` should call
`TextEditor::ComputeTextValue()` if the editor has not been initialized because
it requires the native anonymous subtree to compute the value.  I'm not sure
whether this is a bug when `<textarea>` is being initialized.
(I guess that it should get the default value of the text control element or
`mValue` in the case, but we should do that in another bug separately.)

I couldn't find the crash testcase, so, this does not contain a new test.

Differential Revision: https://phabricator.services.mozilla.com/D241543